refactor: update cursor cost id name

--- a/idle-game/index.html
+++ b/idle-game/index.html
@@ -16,7 +16,7 @@
     <div class="shopContainer">
         <h1>Shop</h1>
         <ul class="shopList">
-            <li>Cost: <p id="cursorBaseCost">15</p><button class="shopButton" id="cursor">Cursor</button>+ 0.1 CPS</li>
+            <li>Cost: <p id="cursorCost">15</p><button class="shopButton" id="cursor">Cursor</button>+ 0.1 CPS</li>
         </ul>
     </div>
     <script src="script.js"></script>
