feat: add middleContainer div

--- a/idle-game/index.html
+++ b/idle-game/index.html
@@ -13,6 +13,10 @@
         <button class="button" id="button"></button>
     </div>
 
+    <div class="middleContainer">
+
+    </div>
+    
     <div class="shopContainer">
         <h1>Shop</h1>
         <ul class="shopList">
